--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -163,51 +163,70 @@ steps:
           exit 1
         fi
         EOF
-  # ==========================================
-  # Step 4.5: Wait for previously running triggers before image creation
-  # ==========================================
-  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-    id: wait-before-image
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        echo "⏳ Checking for earlier running triggers before image creation..."
-        WATCHED_TRIGGERS=("trigger-1" "trigger-3")
-        CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
+# ==========================================
+# Step 4.5: Wait for previous trigger (if any) before image creation
+# ==========================================
+- name: gcr.io/google.com/cloudsdktool/cloud-sdk
+  id: wait-before-image
+  entrypoint: bash
+  args:
+    - -c
+    - |
+      echo "⏳ Checking for previous running triggers before image creation..."
+      WATCHED_TRIGGERS=("trigger-1" "trigger-3")   # Triggers to watch
+      CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
 
-        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-            continue
+      # Fetch the latest previous build (excluding current trigger) that started before current trigger
+      PREV_BUILD_ID=""
+      PREV_TRIGGER=""
+      CURRENT_START_TIME=$$(date -u +"%Y-%m-%dT%H:%M:%S")
+
+      for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+        if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+          continue
+        fi
+
+        BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
+          --filter="status:(WORKING OR QUEUED OR SUCCESS OR FAILURE OR CANCELLED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
+          --sort-by="~createTime" --limit=1 \
+          --format="value(id,createTime)")
+
+        if [[ -n "$$BUILD_INFO" ]]; then
+          BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
+          BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+          if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
+            PREV_BUILD_ID=$$BUILD_ID
+            PREV_TRIGGER=$$TRIGGER
+            echo "⏳ Found previous build $$PREV_BUILD_ID from $$PREV_TRIGGER started at $$BUILD_START"
+            break
           fi
+        fi
+      done
 
-          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,createTime)")
+      if [[ -z "$$PREV_BUILD_ID" ]]; then
+        echo "✅ No previous trigger builds to wait for — proceeding with image creation."
+        exit 0
+      fi
 
-          if [[ -n "$$BUILD_INFO" ]]; then
-            BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
-            BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
-            echo "⏳ Waiting for $$TRIGGER build $$BUILD_ID started at $$BUILD_START..."
+      # Wait for that previous build to finish
+      echo "⏳ Waiting for previous build $$PREV_BUILD_ID ($$PREV_TRIGGER) to complete..."
+      while true; do
+        STATUS=$$(gcloud builds describe $$PREV_BUILD_ID --region=asia-east1 --format="value(status)")
+        if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
+          echo "🔹 Previous build $$PREV_BUILD_ID finished with status $$STATUS"
+          break
+        fi
+        echo "⏱ Previous build $$PREV_BUILD_ID still running, waiting 15s..."
+        sleep 15
+      done
 
-            while true; do
-              STATUS=$$(gcloud builds describe $$BUILD_ID --region=asia-east1 --format="value(status)")
-              if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
-                echo "🔹 $$TRIGGER build $$BUILD_ID finished with status $$STATUS"
-                break
-              fi
-              sleep 15
-            done
+      if [[ "$$STATUS" != "SUCCESS" ]]; then
+        echo "⚠️ Previous build $$PREV_BUILD_ID did not succeed (status: $$STATUS), aborting image creation."
+        exit 1
+      fi
 
-            if [[ "$$STATUS" != "SUCCESS" ]]; then
-              echo "⚠️ $$TRIGGER failed/cancelled, aborting image creation."
-              exit 1
-            fi
-          fi
-        done
+      echo "✅ Previous build completed successfully — safe to create image."
 
-        echo "✅ No earlier running triggers — safe to create image."
   # ==========================================
   # Step 5: Create image from MIG VM
   # ==========================================
