--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,58 +1,37 @@
 steps:
   # ==========================================
-  # Step 1: Wait logic for running triggers
+  # Step 1: Wait logic for running triggers and MIG VM readiness
   # ==========================================
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: bash
     args:
       - -c
       - |
-        echo "⏳ Checking current trigger against actively running triggers..."
+        echo "⏳ Checking ongoing triggers and MIG VM readiness..."
 
         WATCHED_TRIGGERS=("trigger-1" "trigger-3")
         CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
+        MIG_NAME="vamsi-mig"
+        ZONE="asia-east1-b"
+
         echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER"
 
+        # Get current build info for this trigger
         CURRENT_BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
           --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$CURRENT_TRIGGER" \
-          --sort-by="~createTime" --limit=1 \
-          --format="value(id,createTime)")
+          --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
 
         if [[ -z "$$CURRENT_BUILD_INFO" ]]; then
-          echo "⚠️ No ongoing build found for $$CURRENT_TRIGGER (maybe already finished)."
+          echo "⚠️ No ongoing build found for $$CURRENT_TRIGGER."
           exit 0
         fi
 
         CURRENT_BUILD_ID=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$1}')
         CURRENT_START_TIME=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$2}')
+
         echo "⏰ Current build $$CURRENT_BUILD_ID started at: $$CURRENT_START_TIME"
 
-        SKIP_WAIT="true"
-        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-            continue
-          fi
-          LATEST_BUILD=$$(gcloud builds list --region=asia-east1 \
-            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,createTime)")
-          if [[ -n "$$LATEST_BUILD" ]]; then
-            OTHER_START=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
-            if [[ "$$OTHER_START" < "$$CURRENT_START_TIME" ]]; then
-              SKIP_WAIT="false"
-              echo "⏳ $$TRIGGER is still running and started earlier at $$OTHER_START"
-              break
-            fi
-          fi
-        done
-
-        if [[ "$$SKIP_WAIT" == "true" ]]; then
-          echo "✅ No earlier running triggers found → skipping wait logic."
-          exit 0
-        fi
-
-        echo "⚠️ Found earlier running trigger(s) → waiting for them to finish..."
-
+        # Function to wait for a build to finish
         wait_for_build() {
           local TRIGGER_NAME=$$1
           local BUILD_ID=$$2
@@ -74,25 +53,80 @@ steps:
           fi
         }
 
-        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-            continue
-          fi
-          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,createTime)")
-          if [[ -z "$$BUILD_INFO" ]]; then
-            echo "ℹ️ No running build found for $$TRIGGER, skipping."
-            continue
-          fi
-          BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
-          BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+        # Loop to check ongoing triggers
+        while true; do
+          PREV_RUNNING=0
+          PREV_TRIGGER_NAME=""
+          PREV_BUILD_ID=""
 
-          if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
-            wait_for_build "$$TRIGGER" "$$BUILD_ID"
+          for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+            if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+              continue
+            fi
+
+            BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
+              --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
+              --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
+
+            if [[ -n "$$BUILD_INFO" ]]; then
+              BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+              if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
+                PREV_RUNNING=$$((PREV_RUNNING+1))
+                PREV_TRIGGER_NAME="$$TRIGGER"
+                PREV_BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
+              fi
+            fi
+          done
+
+          if [[ $$PREV_RUNNING -eq 0 ]]; then
+            echo "✅ No previous triggers running → skip wait and go to Step 2."
+            break
+          elif [[ $$PREV_RUNNING -eq 1 ]]; then
+            echo "⏳ One previous trigger ($$PREV_TRIGGER_NAME) is running → wait for MIG rolling update to start..."
+
+            # ✅ NEW LOGIC: Wait until MIG rolling update actually starts
+            while true; do
+              CURRENT_ACTIONS=$$(gcloud compute instance-groups managed list-instances $$MIG_NAME \
+                --zone=$$ZONE --format="value(currentAction)" | grep -v NONE || true)
+
+              if [[ -n "$$CURRENT_ACTIONS" ]]; then
+                echo "🔄 MIG rolling update detected, fetching latest template..."
+                break
+              fi
+
+              echo "⏱ Waiting for MIG rolling update to start..."
+              sleep 15
+            done
+
+            # Once rolling update started, get latest template being rolled out
+            LATEST_TEMPLATE=$$(gcloud compute instance-groups managed list-instances $$MIG_NAME \
+              --zone=$$ZONE \
+              --format="value(version.instanceTemplate.basename())" | sort | uniq | tail -n 1)
+
+            echo "ℹ️ Latest template being deployed: $$LATEST_TEMPLATE"
+
+            # Wait for at least one VM from this template to be healthy
+            while true; do
+              READY_VM=$$(gcloud compute instance-groups managed list-instances $$MIG_NAME \
+                  --zone=$$ZONE \
+                  --format="value(name,version.instanceTemplate.basename(),currentAction,healthState)" \
+                  | awk -v tmpl="$$LATEST_TEMPLATE" '$$2==tmpl && $$3=="NONE"  {print $$1}' \
+                  | head -n1)
+
+              if [[ -n "$$READY_VM" ]]; then
+                echo "✅ MIG VM $$READY_VM from rolling update template $$LATEST_TEMPLATE is healthy → proceed to Step 2."
+                break 2
+              fi
+              echo "⏱ Waiting for MIG VM from template ($$LATEST_TEMPLATE) to be ready..."
+              sleep 15
+            done
+          else
+            echo "⚠️ Found multiple previous triggers running ($$PREV_RUNNING) → executing wait logic..."
+            wait_for_build "$$PREV_TRIGGER_NAME" "$$PREV_BUILD_ID"
+            # After waiting, loop will re-evaluate PREV_RUNNING
           fi
         done
+
 
   # ==========================================
   # Step 2: Generate version tag
@@ -163,69 +197,64 @@ steps:
           exit 1
         fi
         EOF
-# ==========================================
-# Step 4.5: Wait for previous trigger (if any) before image creation
-# ==========================================
-- name: gcr.io/google.com/cloudsdktool/cloud-sdk
-  id: wait-before-image
-  entrypoint: bash
-  args:
-    - -c
-    - |
-      echo "⏳ Checking for previous running triggers before image creation..."
-      WATCHED_TRIGGERS=("trigger-1" "trigger-3")   # Triggers to watch
-      CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
 
-      # Fetch the latest previous build (excluding current trigger) that started before current trigger
-      PREV_BUILD_ID=""
-      PREV_TRIGGER=""
-      CURRENT_START_TIME=$$(date -u +"%Y-%m-%dT%H:%M:%S")
+  # ==========================================
+  # Step 4.5: Wait for previous trigger (if any) before image creation
+  # ==========================================
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    id: wait-before-image
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        echo "⏳ Checking for previous running triggers before image creation..."
+        WATCHED_TRIGGERS=("trigger-1" "trigger-3")
+        CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
 
-      for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-        if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-          continue
+        PREV_BUILD_ID=""
+        PREV_TRIGGER=""
+        CURRENT_START_TIME=$$(date -u +"%Y-%m-%dT%H:%M:%S")
+
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+            continue
+          fi
+
+          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
+            --filter="status:(WORKING OR QUEUED OR SUCCESS OR FAILURE OR CANCELLED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 \
+            --format="value(id,createTime)")
+
+          if [[ -n "$$BUILD_INFO" ]]; then
+            BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
+            BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+            if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
+              PREV_BUILD_ID=$$BUILD_ID
+              PREV_TRIGGER=$$TRIGGER
+              echo "⏳ Found previous build $$PREV_BUILD_ID from $$PREV_TRIGGER started at $$BUILD_START"
+              break
+            fi
+          fi
+        done
+
+        if [[ -z "$$PREV_BUILD_ID" ]]; then
+          echo "✅ No previous trigger builds to wait for — proceeding with image creation."
+          exit 0
         fi
 
-        BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-          --filter="status:(WORKING OR QUEUED OR SUCCESS OR FAILURE OR CANCELLED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-          --sort-by="~createTime" --limit=1 \
-          --format="value(id,createTime)")
-
-        if [[ -n "$$BUILD_INFO" ]]; then
-          BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
-          BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
-          if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
-            PREV_BUILD_ID=$$BUILD_ID
-            PREV_TRIGGER=$$TRIGGER
-            echo "⏳ Found previous build $$PREV_BUILD_ID from $$PREV_TRIGGER started at $$BUILD_START"
+        echo "⏳ Waiting for previous build $$PREV_BUILD_ID ($$PREV_TRIGGER) to finish..."
+        while true; do
+          STATUS=$$(gcloud builds describe $$PREV_BUILD_ID --region=asia-east1 --format="value(status)")
+          if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
+            echo "🔹 Previous build $$PREV_BUILD_ID finished with status $$STATUS"
             break
           fi
-        fi
-      done
+          echo "⏱ Previous build $$PREV_BUILD_ID still running, waiting 15s..."
+          sleep 15
+        done
 
-      if [[ -z "$$PREV_BUILD_ID" ]]; then
-        echo "✅ No previous trigger builds to wait for — proceeding with image creation."
-        exit 0
-      fi
+        echo "✅ Previous build completed — proceeding with image creation."
 
-      # Wait for that previous build to finish
-      echo "⏳ Waiting for previous build $$PREV_BUILD_ID ($$PREV_TRIGGER) to complete..."
-      while true; do
-        STATUS=$$(gcloud builds describe $$PREV_BUILD_ID --region=asia-east1 --format="value(status)")
-        if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
-          echo "🔹 Previous build $$PREV_BUILD_ID finished with status $$STATUS"
-          break
-        fi
-        echo "⏱ Previous build $$PREV_BUILD_ID still running, waiting 15s..."
-        sleep 15
-      done
-
-      if [[ "$$STATUS" != "SUCCESS" ]]; then
-        echo "⚠️ Previous build $$PREV_BUILD_ID did not succeed (status: $$STATUS), aborting image creation."
-        exit 1
-      fi
-
-      echo "✅ Previous build completed successfully — safe to create image."
 
   # ==========================================
   # Step 5: Create image from MIG VM
